# jonggrang-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: SKILL.md  settings.json
.claude/agents/: developer.md  reviewer.md  test-lead.md
.claude/skills/core/gateway-deploy/: SKILL.md
.claude/skills/core/migration/: SKILL.md
.claude/skills/core/persisting-agent-outputs/: SKILL.md
.claude/skills/core/persisting-progress-across-sessions/: SKILL.md
.github/workflows/: build.yml
.jonggrang/: jonggrang-tasks.json  jonggrang.json  progress.txt
.jonggrang/.ephemeral/: compaction-state.json
.jonggrang/lib/: backend-args.js  compaction.js  feedback.js  gateway.js  hooks.js  jonggrang.js  locks.js  orchestration.js  roles.js  sandbox.js  settings.js  tui.js  web-runners.js  web-state.js
.opencode/: opencode.json
.opencode/agents/: lead.md  tester.md
.opencode/plugins/: jonggrang.js
hooks/claude/: agent-first.sh  block-secret-commands.sh  block-sensitive-files.sh  compaction-gate.sh  feedback-loop.sh  output-enforcement.sh  quality-gate.sh  sanitize-output.sh  secret-final-check.sh  session-init.sh  settings.json  task-role-claim.sh  task-skill-enforcement.sh  track-modifications.sh
hooks/opencode/: plugin.js
hooks/pi/: jonggrang-extension.ts
src/: index.html  main.ts
src-tauri/: Cargo.toml  default_14412818356729824992_0_62410.profraw  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tunnel.rs
(+27 files in other folders)
